fix(build): s/tpm2_class/tpm2_call/ in .gitlab-ci.yml
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@iki.fi>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ publish:
   image: rust:latest
   script:
     - cargo b --verbose
-    - cargo publish -p tpm2_class
+    - cargo publish -p tpm2_call
     - cargo publish -p tpm2_cli
   only:
     - tags
