docs: document development process to README.md
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@iki.fi>

--- a/tpm2_call/Cargo.toml
+++ b/tpm2_call/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://gitlab.com/tpm2_library"
 repository = "https://gitlab.com/tpm2_library.git"
 edition = "2021"
 rust-version = "1.78"
+readme = "../README.md"
 
 [dependencies]
 strum_macros = "0.26.4"
