--- a/tpm2_cli/Cargo.toml
+++ b/tpm2_cli/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "https://gitlab.com/tpm2_library"
 repository = "https://gitlab.com/tpm2_library.git"
 edition = "2021"
 rust-version = "1.78"
+readme = "../README.md"
 
 [dependencies]
 tpm2_call = { path = "../tpm2_call", version = "0.1.2"  }
