--- a/tpm2_cli/Cargo.toml
+++ b/tpm2_cli/Cargo.toml
@@ -14,6 +14,8 @@ tpm2_call = { path = "../tpm2_call", version = "0.2.0"  }
 clap = { version = "4.0", features = ["derive"] }
 clap-num = "1.1.1"
 log = "0.4.21"
+env_logger = "0.11.3"
+bincode = "1.3.3"
 
 [[bin]]
 name = "tpm2-cli"
