--- a/tpm2_cli/Cargo.toml
+++ b/tpm2_cli/Cargo.toml
@@ -13,3 +13,4 @@ readme = "../README.md"
 tpm2_call = { path = "../tpm2_call", version = "0.1.2"  }
 clap = { version = "4.0", features = ["derive"] }
 clap-num = "1.1.1"
+log = "0.4.21"
