--- a/tpm2_cli/Cargo.toml
+++ b/tpm2_cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tpm2_cli"
 description = "TPM 2.0 command-line interface"
-version = "0.1.3"
+version = "0.2.0"
 license = "MIT"
 homepage = "https://gitlab.com/tpm2_library"
 repository = "https://gitlab.com/tpm2_library.git"
@@ -10,7 +10,11 @@ rust-version = "1.78"
 readme = "../README.md"
 
 [dependencies]
-tpm2_call = { path = "../tpm2_call", version = "0.1.2"  }
+tpm2_call = { path = "../tpm2_call", version = "0.2.0"  }
 clap = { version = "4.0", features = ["derive"] }
 clap-num = "1.1.1"
 log = "0.4.21"
+
+[[bin]]
+name = "tpm2-cli"
+path = "src/main.rs"
