fix(build): homepage and repository url's
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@iki.fi>

--- a/tpm2_call/Cargo.toml
+++ b/tpm2_call/Cargo.toml
@@ -3,8 +3,8 @@ name = "tpm2_call"
 description = "TPM 2.0 library protocol"
 version = "0.2.1"
 license = "MIT"
-homepage = "https://gitlab.com/tpm2_library"
-repository = "https://gitlab.com/tpm2_library.git"
+homepage = "https://gitlab.com/jarkkojs/tpm2_library"
+repository = "https://gitlab.com/jarkkojs/tpm2_library.git"
 edition = "2021"
 rust-version = "1.78"
 readme = "../README.md"
