--- a/tpm2_cli/Cargo.toml
+++ b/tpm2_cli/Cargo.toml
@@ -16,6 +16,7 @@ clap-num = "1.1.1"
 log = "0.4.21"
 env_logger = "0.11.3"
 bincode = "1.3.3"
+nix = { version = "0.29.0", features = ["fs", "uio"] }
 
 [[bin]]
 name = "tpm2-cli"
