chore: codeberg url's
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@iki.fi>

--- a/call/Cargo.toml
+++ b/call/Cargo.toml
@@ -3,8 +3,8 @@ name = "tpm2_call"
 description = "TPM 2.0 library protocol"
 version = "0.3.4"
 license = "MIT"
-homepage = "https://gitlab.com/jarkkojs/tpm2_library"
-repository = "https://gitlab.com/jarkkojs/tpm2_library.git"
+homepage = "https://codeberg.org/jarkko/tpm2_library.git"
+repository = "https://codeberg.org/jarkko/tpm2_library.git.git"
 edition = "2021"
 rust-version = "1.78"
 readme = "../README.md"
