feat(tpm2_call): add struct for `TPMA_OBJECTS`
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@iki.fi>

--- a/call/Cargo.toml
+++ b/call/Cargo.toml
@@ -10,5 +10,6 @@ rust-version = "1.78"
 readme = "../README.md"
 
 [dependencies]
+bitflags = "2.5.0"
 serde = { version = "1.0.203", features = ["derive"] }
 strum_macros = "0.26.4"
